--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "5.12.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-markdown": "1.0.0-beta.8",
+    "eslint-plugin-markdown": "1.0.0",
     "eslint-plugin-node": "7.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
